Fixed overflow-x issue

--- a/client/Home/home.css
+++ b/client/Home/home.css
@@ -4,6 +4,10 @@
   src: url(fonts/HARRYP__.TTF) format("truetype");
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* Heading */
 h1 {
   font-family: "HarryPotter";
